setup/flink-kubernetes/minio/temp-minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adaptor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # - host: flink-deployment # http://flink-deployment
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio1
                port:
                  number: 9000
